<resources>
    <string name="app_name">Spaceship management system</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="color_hint">Select a color</string>
    <string name="name_hint">Enter the title</string>
    <string name="mass_hint">Enter the mass</string>
    <string name="location_hint">Enter the Location</string>
    <string name="cancel">Cancel</string>
    <string name="add">ADD</string>
</resources>